@@ -21,16 +21,11 @@ jobs:
       fail-fast: false
       matrix:
         perl-version:
+          - "5.32"
           - "5.30"
           - "5.28"
           - "5.26"
           - "5.24"
-          - "5.22"
-          - "5.20"
-          - "5.18"
-          - "5.16"
-          - "5.14"
-          - "5.12"
 
     container:
       image: perldocker/perl-tester:${{ matrix.perl-version }}
