@@ -4,7 +4,7 @@
 $COVERAGE_LEVEL = 50;
 
 # Minimum Perl version requirement.
-$MINIMUM_VERSION = '5.012';
+$MINIMUM_VERSION = '5.024';
 
 # File must end with this line.
 1;
